<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_heading"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_heading"
            android:text="Select Quiz"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="@dimen/padding_heading"
            android:textColor="@color/colorBlack"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_Mathematics"
            android:background="@drawable/mathamatics"
            android:text="@string/mathematics"
            style="@style/btn_activity_main" />

        <Button
            android:id="@+id/btn_Wonders"
            android:background="@drawable/wonders"
            android:text="@string/wonders"
            style="@style/btn_activity_main" />

        <Button
            android:id="@+id/btn_Android"
            android:background="@drawable/android"
            android:text="@string/android"
            style="@style/btn_activity_main" />

        <Button
            android:id="@+id/btn_Countries"
            android:background="@drawable/countries"
            android:text="@string/countries"
            style="@style/btn_activity_main" />

        <Button
            android:id="@+id/btn_Actors"
            android:background="@drawable/actors"
            android:text="@string/actors"
            style="@style/btn_activity_main" />

        <Button
            android:id="@+id/btn_Puzzle"
            android:background="@drawable/puzzle"
            android:text="@string/puzzle"
            style="@style/btn_activity_main" />

    </LinearLayout>

</ScrollView>